Fixed not centered texts on buttons in Linux

--- a/app/styles/_base.sass
+++ b/app/styles/_base.sass
@@ -12,10 +12,10 @@ body
 
   &--auth
     background: #3687c0
-  
+
   &--welcome
     background: $gray-lighter
-  
+
     @include media-breakpoint-up(xs)
       padding-top: 60px
 
@@ -34,7 +34,7 @@ body
 
 .container
   margin-bottom: 20px
-  
+
   @include media-breakpoint-up(xs)
     margin-top: 70px
 
@@ -120,3 +120,8 @@ blockquote
   overflow: hidden
   position: relative
   height: 100%
+
+.btn
+  padding-top: 0
+  padding-bottom: 0
+  line-height: 36px
