--- a/app/styles/_custom-navbar.sass
+++ b/app/styles/_custom-navbar.sass
@@ -24,15 +24,16 @@
       svg
         height: 23px
         vertical-align: top
-  
-  .navbar-nav.float-sm-right.index-login
-    line-height: 45px
-    float: right
+
+  .index-login
+    line-height: 50px
 
     .btn
       height: 30px
-      line-height: 10px
+      line-height: 30px
       background-color: #e4e4e4
+      padding-top: 0
+      padding-bottom: 0
 
       &:hover, &:focus
         opacity: 0.8
@@ -45,8 +46,8 @@
 
   .nav-item
     &.button
-      line-height: 45px
-      
+      line-height: 50px
+
     .dropdown-img
       height: 36px
       border-radius: 0.15rem
@@ -105,12 +106,12 @@
 
       &:hover, &:focus
         color: $gray-lighter
-        
+
       &.active
         color: #fff
         pointer-events: none
         background: #4d5256
-        
+
         &:focus, &:hover
           color: #fff
           background: #4d5256
